updated call to getId from threadId since threadId does not support in JDK 17