@@ -6,10 +6,11 @@ import pages.LoginPage;
 
 public class LoginTest extends TestBase {
 
-    @Test
+    @SuppressWarnings("deprecation")
+	@Test
     public void testLogin() {
         getDriver().get("https://www.saucedemo.com");
-        System.out.println("Running on Thread: "+Thread.currentThread().threadId());
+        System.out.println("Running on Thread: "+Thread.currentThread().getId());
         LoginPage login = new LoginPage(getDriver());
         login.login("visual_user", "secret_sauce");
     }
